ingresses.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tom-selleck-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: "124.183.224.68"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: client
          servicePort: 3000
      - path: /api/?(.*)
        backend:
          serviceName: server
          servicePort: 9000
